# ghc-specter

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  cabal.project  features.html  flake.nix  genindex.html  getting-started.html  ghc-specter.yaml.sample  hie.yaml  how-it-works.html  index.html  objects.inv  package.yaml  search.html  searchindex.js  what-is-it.html
attic/daemon/: ghc-specter-daemon.cabal
attic/daemon/app/ghc-specter-daemon/: Main.hs
attic/daemon/src-ghc92/GHCSpecter/Worker/: Hie.hs
daemon/: ghc-specter-daemon.cabal  package.yaml
daemon-exp/: ghc-specter-daemon-exp.cabal
daemon-exp/app/ghc-specter-daemon-exp/: BasicWidget.hs  Config.hs  Handler.hs  Main.hs  ModuleGraph.hs  Renderer.hs  Session.hs  SourceView.hs  Timing.hs  Types.hs  Util.hs
daemon-exp/app/ghc-specter-daemon-exp/GHCSpecter/Gtk/: Console.hs  Handler.hs  Main.hs  ModuleGraph.hs  Renderer.hs  Session.hs  SourceView.hs  Timing.hs  Types.hs
daemon-exp/app/ghc-specter-daemon-exp/Render/: Common.hs  Main.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Timing.hs
daemon-exp/app/ghc-specter-daemon-exp/Render/Parts/: Console.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Timing.hs
daemon-exp/app/ghc-specter-daemon-exp/Render/Util/: Rules.hs
daemon/app/: Main.hs
daemon/app/GHCSpecter/: Web.hs
daemon/app/GHCSpecter/ConcurReplica/: DOM.hs  SVG.hs  Types.hs
daemon/app/GHCSpecter/ConcurReplica/DOM/: Events.hs
daemon/app/GHCSpecter/Driver/: Web.hs
daemon/app/GHCSpecter/Render/: Web.hs
daemon/app/GHCSpecter/Render/Web/: ConcurReplicaSVG.hs  Console.hs  ConsoleItem.hs  GHCCore.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Timing.hs  Util.hs
daemon/app/GHCSpecter/Web/: ConsoleItem.hs  GHCCore.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Timing.hs
daemon/app/font-test/: Main.hs
daemon/app/ghc-specter-daemon/: Demo.hs  GeneralUtil.hs  Handler.hs  ImGuiMain.hs  Main.hs  Render.hs  RenderUtil.hs  StorableInstances.hs  Util.hs
daemon/app/ghc-specter-daemon-console-only/: Main.hs
daemon/app/ghc-specter-daemon-terminal/: Main.hs
daemon/app/ghc-specter-daemon/GHCSpecter/: Web.hs
daemon/app/ghc-specter-daemon/GHCSpecter/ConcurReplica/: DOM.hs  Run.hs  WaiHandler.hs
daemon/app/ghc-specter-daemon/GHCSpecter/Driver/: Web.hs
daemon/app/ghc-specter-daemon/GHCSpecter/Web/: ConcurReplicaSVG.hs  Console.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Timing.hs  Util.hs
daemon/app/ghc-specter-daemon/Render/: BlockerView.hs  Common.hs  Console.hs  ModuleGraph.hs  Session.hs  SourceView.hs  TimingView.hs
daemon/app/ghc-specter-daemon/Util/: Color.hs  GUI.hs  Orphans.hs  Plot.hs  Render.hs
daemon/app/ghc-specter-daemon/cbits/: shim.cpp  shim.mm
daemon/app/toolbox-server/: Main.hs
daemon/app/toolbox-server/Toolbox/Util/: OGDF.hs
daemon/assets/: ghc-specter.css
daemon/csrc/: shim.cpp
daemon/src-ghc92/GHCSpecter/Worker/: Hie.hs
daemon/src-ghc94/GHCSpecter/Data/GHC/: Core.hs
daemon/src-ghc94/GHCSpecter/Worker/: Hie.hs
daemon/src-ghc96/GHCSpecter/Worker/: Hie.hs
daemon/src/GHCSpecter/: Control.hs  Driver.hs  Render.hs
daemon/src/GHCSpecter/Common/: Types.hs
daemon/src/GHCSpecter/Control/: DSL.hs  Free.hs  Runner.hs  Types.hs
daemon/src/GHCSpecter/Data/: Assets.hs  Hie.hs
daemon/src/GHCSpecter/Data/GHC/: Core.hs  Hie.hs
daemon/src/GHCSpecter/Data/Timing/: Types.hs  Util.hs
daemon/src/GHCSpecter/Driver/: Comm.hs  ConsoleOnly.hs  Session.hs  Terminal.hs  Worker.hs
daemon/src/GHCSpecter/Driver/Session/: Types.hs
daemon/src/GHCSpecter/GraphLayout/: OGDF.hs  Sugiyama.hs  Types.hs
daemon/src/GHCSpecter/GraphLayout/Algorithm/: BFS.hs  Builder.hs  Cluster.hs
daemon/src/GHCSpecter/Layouter/: Packer.hs  Text.hs
daemon/src/GHCSpecter/Layouter/Box/: Flow.hs
daemon/src/GHCSpecter/Layouter/Font/: Estimator.hs  Text.hs  Types.hs
daemon/src/GHCSpecter/Layouter/Graph/: OGDF.hs  Sugiyama.hs  Types.hs
daemon/src/GHCSpecter/Render/: ConcurReplicaSVG.hs  ModuleGraph.hs  Session.hs  SourceView.hs  Tab.hs  Timing.hs  Util.hs
daemon/src/GHCSpecter/Render/Components/: Console.hs  ConsoleItem.hs  GHCCore.hs  GraphView.hs  ModuleTree.hs  Tab.hs  (+3 more)
daemon/src/GHCSpecter/Server/: Types.hs
daemon/src/GHCSpecter/UI/: Console.hs  Constants.hs  Help.hs  Session.hs  SourceView.hs  Tab.hs  Types.hs
daemon/src/GHCSpecter/Util/: Dump.hs  Flow.hs  Map.hs  ModuleGraph.hs  OGDF.hs  Print.hs  SourceText.hs  SourceTree.hs  Timing.hs  Transformation.hs
daemon/src/GHCSpecter/Worker/: CallGraph.hs  Hie.hs  ModuleGraph.hs  Timing.hs
daemon/src/Toolbox/Render/: Session.hs  SourceView.hs  Timing.hs
daemon/src/Toolbox/Worker/: ModuleGraph.hs
logcat/: ghc-specter-logcat.cabal
logcat/app/hi-live/: Main.hs
logcat/app/logcat/: Control.hs  Log.hs  Main.hs  Render.hs  Types.hs  View.hs
logcat/app/logcat/Render/: Heap.hs  Hist.hs  Stat.hs  Timeline.hs  Util.hs
logcat/app/logcat/Util/: Event.hs  Histo.hs
logcat/src/: flake.nix
logcat/src/GHCSpecter/Eventlog/: Extract.hs  FromHTML.hs  Types.hs
logcat/util/: Extract.hs  FromHTML.hs  GHCEvents.hs  Main.hs  Types.hs  flake.nix
plugin/: ghc-specter-plugin.cabal  package.yaml
plugin/src-ghc92/GHCSpecter/Util/: GHC.hs
plugin/src-ghc92/Plugin/: GHCSpecter.hs
plugin/src-ghc92/Plugin/GHCSpecter/: Hooks.hs  Init.hs  Tasks.hs
plugin/src-ghc94/GHCSpecter/Util/: GHC.hs
plugin/src-ghc94/Plugin/: GHCSpecter.hs
plugin/src-ghc94/Plugin/GHCSpecter/: Hooks.hs  Init.hs  Tasks.hs
plugin/src-ghc96/GHCSpecter/Util/: GHC.hs
plugin/src-ghc96/Plugin/: GHCSpecter.hs
plugin/src-ghc96/Plugin/GHCSpecter/: Hooks.hs  Init.hs  Tasks.hs
plugin/src-ghcHEAD/GHCSpecter/Util/: GHC.hs
plugin/src-ghcHEAD/Plugin/: GHCSpecter.hs
plugin/src-ghcHEAD/Plugin/GHCSpecter/: Hooks.hs  Init.hs  Tasks.hs
plugin/src/GHCSpecter/: Channel.hs  Comm.hs  Config.hs
plugin/src/GHCSpecter/Data/: Map.hs
plugin/src/GHCSpecter/Util/: GHC.hs
plugin/src/Plugin/: GHCSpecter.hs
plugin/src/Plugin/GHCSpecter/: Comm.hs  Console.hs  Hooks.hs  Task.hs  Tasks.hs  Types.hs  Util.hs
render/: ghc-specter-render.cabal
render/src/GHCSpecter/Graphics/: DSL.hs
(+149 files in other folders)
