cabal-version: 3.0

name:           ghc-specter-daemon-exp
version:        0.1.0.0
synopsis:       Daemon process for ghc-specter
description:    Please see the README on GitHub at <https://github.com/MercuryTechnologies/ghc-specter#readme>
category:       Development
homepage:       https://github.com/MercuryTechnologies/ghc-specter#readme
bug-reports:    https://github.com/MercuryTechnologies/ghc-specter/issues
author:         Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
maintainer:     Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
copyright:      © 2022 Mercury Inc. All rights reserved.
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/MercuryTechnologies/ghc-specter

executable ghc-specter-daemon-exp
  main-is:       Main.hs
  other-modules: BasicWidget
                 Config
                 Handler
                 ModuleGraph
                 Renderer
                 Timing
                 Types

  hs-source-dirs:
      app/ghc-specter-daemon-exp
  ghc-options:   -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                 base >=4.15 && <5,
                 containers,
                 extra,
                 ghc-specter-daemon,
                 ghc-specter-plugin,
                 ghc-specter-render,
                 gi-cairo-connector,
                 gi-cairo-render,
                 gi-gdk,
                 gi-gtk,
                 gi-gtk-hs,
                 gi-pango,
                 gi-pangocairo,
                 haskell-gi-base,
                 lens,
                 stm,
                 text,
                 time
  default-language: GHC2021
