cabal-version: 1.12
name:           ghc-specter-daemon
version:        0.1.0.0
synopsis:       Daemon process for ghc-specter
description:    Please see the README on GitHub at <https://github.com/MercuryTechnologies/ghc-specter#readme>
category:       Development
homepage:       https://github.com/MercuryTechnologies/ghc-specter#readme
bug-reports:    https://github.com/MercuryTechnologies/ghc-specter/issues
author:         Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
maintainer:     Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
copyright:      © 2022 Mercury Inc. All rights reserved.
build-type:     Simple
extra-source-files:
    README.md
data-files:
    assets/ghc-specter.png
    assets/ghc-specter.css

source-repository head
  type: git
  location: https://github.com/MercuryTechnologies/ghc-specter

library
  exposed-modules:
      GHCSpecter.Control
      GHCSpecter.Control.Runner
      GHCSpecter.Control.Types
      GHCSpecter.Data.Assets
      GHCSpecter.Data.GHC.Core
      GHCSpecter.Data.GHC.Hie
      GHCSpecter.Data.Timing.Types
      GHCSpecter.Data.Timing.Util
      GHCSpecter.Driver.Comm
      GHCSpecter.Driver.Session
      GHCSpecter.Driver.Session.Types
      GHCSpecter.Driver.Worker
      GHCSpecter.GraphLayout.Algorithm.BFS
      GHCSpecter.GraphLayout.Algorithm.Builder
      GHCSpecter.GraphLayout.Algorithm.Cluster
      GHCSpecter.GraphLayout.OGDF
      GHCSpecter.GraphLayout.Sugiyama
      GHCSpecter.GraphLayout.Types
      GHCSpecter.Render.Components.Console
      GHCSpecter.Render.Components.GraphView
      GHCSpecter.Render.Components.ModuleTree
      GHCSpecter.Render.Components.Tab
      GHCSpecter.Render.Components.TextView
      GHCSpecter.Render.Components.TimingView
      GHCSpecter.Render.Session
      GHCSpecter.Render.SourceView
      GHCSpecter.Render.Tab
      GHCSpecter.Server.Types
      GHCSpecter.UI.Constants
      GHCSpecter.UI.Help
      GHCSpecter.UI.Types
      GHCSpecter.UI.Types.Event
      GHCSpecter.Util.ModuleGraph
      GHCSpecter.Util.SourceText
      GHCSpecter.Util.SourceTree
      GHCSpecter.Util.Transformation
      GHCSpecter.Worker.CallGraph
      GHCSpecter.Worker.Hie
      GHCSpecter.Worker.ModuleGraph
      GHCSpecter.Worker.Timing
  other-modules:
      Paths_ghc_specter_daemon
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      OGDF
    , aeson
    , base >=4.15 && <5
    , base64-bytestring
    , bytestring
    , containers
    , discrimination
    , errors
    , extra
    , fficxx-runtime
    , ghc
    , ghc-specter-plugin
    , ghc-specter-render
    , indexed
    , indexed-free
    , lens
    , pretty-simple
    , resourcet    
    , stdcxx
    , stm
    , text
    , time
    , transformers
    , unliftio
  default-language: GHC2021
  if impl (ghc >= 9.7)
    hs-source-dirs:
        src-ghc96
  if impl (ghc >= 9.6) && impl (ghc < 9.7)
    hs-source-dirs:
        src-ghc96
  if impl (ghc >= 9.4) && impl (ghc < 9.5)
    hs-source-dirs:
        src-ghc94
  if impl (ghc >= 9.2) && impl (ghc < 9.3)
    hs-source-dirs:
        src-ghc92

executable ghc-specter-daemon
  main-is: Main.hs
  other-modules:
      GHCSpecter.ConcurReplica.DOM
      GHCSpecter.ConcurReplica.DOM.Events
      GHCSpecter.ConcurReplica.Run
      GHCSpecter.ConcurReplica.SVG
      GHCSpecter.ConcurReplica.Types
      GHCSpecter.ConcurReplica.WaiHandler
      GHCSpecter.Driver.Web
      GHCSpecter.Render.Web
      GHCSpecter.Render.Web.ConcurReplicaSVG
      GHCSpecter.Render.Web.Console
      GHCSpecter.Render.Web.ConsoleItem
      GHCSpecter.Render.Web.GHCCore
      GHCSpecter.Render.Web.ModuleGraph
      GHCSpecter.Render.Web.Session
      GHCSpecter.Render.Web.SourceView
      GHCSpecter.Render.Web.Timing
      GHCSpecter.Render.Web.Util
      Paths_ghc_specter_daemon
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.15 && <5
    , bytestring
    , concur-core
    , concur-replica
    , containers
    , errors
    , extra
    -- this free libray dep is still needed due to concur-replica
    , free
    , ghc-specter-daemon
    , ghc-specter-plugin
    , ghc-specter-render
    , http-types
    , lens
    , optparse-applicative
    , pretty-simple
    , replica
    , scientific
    , stm
    , text
    , time
    , wai
    , wai-websockets
    , warp
    , websockets
  default-language: GHC2021

test-suite ghc-specter-daemon-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      GHCSpecter.GraphLayout.Algorithm.BFSSpec
      GHCSpecter.GraphLayout.Algorithm.ClusterSpec
      Paths_ghc_specter_daemon
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.15 && <5
    , bytestring
    , containers
    , ghc-specter-daemon
    , ghc-specter-plugin
    , hspec
    , text
  default-language: GHC2021
