cabal-version:  3.0
name:           ghc-specter-daemon
version:        1.0.0.0
synopsis:       Daemon process for ghc-specter
description:    Please see the README on GitHub at <https://github.com/MercuryTechnologies/ghc-specter#readme>
category:       Development
homepage:       https://github.com/MercuryTechnologies/ghc-specter#readme
bug-reports:    https://github.com/MercuryTechnologies/ghc-specter/issues
author:         Ian-Woo Kim <ianwookim@gmail.com>
maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
copyright:      © 2022-2023 Mercury Inc. All rights reserved.
build-type:     Simple
extra-source-files:
    README.md
data-files:
    assets/ghc-specter.png
    assets/ghc-specter.css
    assets/FreeMono.ttf
    assets/FreeSans.ttf

source-repository head
  type: git
  location: https://github.com/MercuryTechnologies/ghc-specter

library
  exposed-modules:
      GHCSpecter.Control
      GHCSpecter.Control.DSL
      GHCSpecter.Control.Runner
      GHCSpecter.Control.Types
      GHCSpecter.Data.GHC.Core
      GHCSpecter.Data.GHC.Hie
      GHCSpecter.Data.Timing.Types
      GHCSpecter.Data.Timing.Util
      GHCSpecter.Driver
      GHCSpecter.Driver.Comm
      GHCSpecter.Driver.Session
      GHCSpecter.Driver.Session.Types
      GHCSpecter.Driver.Terminal
      GHCSpecter.Driver.Worker
      GHCSpecter.Layouter.Text
      GHCSpecter.Layouter.Graph.Algorithm.BFS
      GHCSpecter.Layouter.Graph.Algorithm.Builder
      GHCSpecter.Layouter.Graph.Algorithm.Cluster
      GHCSpecter.Layouter.Graph.OGDF
      GHCSpecter.Layouter.Graph.Sugiyama
      GHCSpecter.Layouter.Graph.Types
      GHCSpecter.Layouter.Packer
      GHCSpecter.Server.Types
      GHCSpecter.UI.Components.GraphView
      GHCSpecter.UI.Components.ModuleTree
      GHCSpecter.UI.Components.Tab
      GHCSpecter.UI.Components.TextView
      GHCSpecter.UI.Components.TimingView
      GHCSpecter.UI.Console
      GHCSpecter.UI.Constants
      GHCSpecter.UI.Help
      GHCSpecter.UI.Session
      GHCSpecter.UI.SourceView
      GHCSpecter.UI.Tab
      GHCSpecter.UI.Types
      GHCSpecter.UI.Types.Event
      GHCSpecter.Util.Dump
      GHCSpecter.Util.ModuleGraph
      GHCSpecter.Util.SourceText
      GHCSpecter.Util.SourceTree
      GHCSpecter.Util.Transformation
      GHCSpecter.Worker.CallGraph
      GHCSpecter.Worker.Hie
      GHCSpecter.Worker.ModuleGraph
      GHCSpecter.Worker.Timing
  other-modules:
      Paths_ghc_specter_daemon
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages -Werror
  build-depends:
      OGDF
    , base >=4.15 && <5
    , bytestring
    , containers
    , discrimination
    , extra
    , fficxx-runtime
    , ghc
    , ghc-specter-plugin
    , ghc-specter-render
    , haskeline
    , indexed
    , indexed-free
    , lens
    , pretty-simple
    , resourcet
    , safe
    , stdcxx
    , stm
    , text
    , time
    , transformers
    , unliftio
  default-language: GHC2021
  if impl (ghc >= 9.7)
    hs-source-dirs:
        src-ghc96
  if impl (ghc >= 9.6) && impl (ghc < 9.7)
    hs-source-dirs:
        src-ghc96

executable ghc-specter-daemon-terminal
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      app/ghc-specter-daemon-terminal
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.15 && <5
    , ghc-specter-daemon
    , ghc-specter-plugin
    , stm
    , time
  default-language: GHC2021

executable ghc-specter-daemon
  main-is: Main.hs
  other-modules:
    ImGuiMain
    Util.Color
    Util.GUI
    Util.Orphans
    Util.Plot
    Util.Render
    Paths_ghc_specter_daemon
  hs-source-dirs:
      app/ghc-specter-daemon
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.15 && <5
    , bytestring
    , extra
    , fficxx-runtime
    , filepath
    , ghc-specter-daemon
    , ghc-specter-plugin
    , ghc-specter-render
    , imgui
    , implot
    , stdcxx
    , stm
    , text
    , time
    , transformers
  default-language: GHC2021

test-suite ghc-specter-daemon-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      GHCSpecter.Layouter.Graph.Algorithm.BFSSpec
      GHCSpecter.Layouter.Graph.Algorithm.ClusterSpec
      Paths_ghc_specter_daemon
  hs-source-dirs:
      test
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.15 && <5
    , bytestring
    , containers
    , ghc-specter-daemon
    , ghc-specter-plugin
    , hspec
    , text
  default-language: GHC2021
