Name:		ghc-specter-logcat
Version:	1.0
Synopsis:	logging
Description: 	logging
Homepage:       http://MercuryTechnologies.github.io/ghc-specter
License: 	MIT
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 9.6
Build-Type: 	Simple
Cabal-Version:  2.0
data-files:     CHANGES
Source-repository head
  type: git
  location: git://github.com/MercuryTechnologies/ghc-specter.git

library
  exposed-modules:
      GHCSpecter.Eventlog.Extract
      GHCSpecter.Eventlog.FromHTML
      GHCSpecter.Eventlog.Types
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base,
      bytestring,
      ghc-events,
      ghc-heap,
      split,
      tagsoup,
      text,
      unordered-containers
  default-language: GHC2021

Executable logcat
  Main-is:        Main.hs
  other-modules:  Control
                  Log
                  Render
                  Render.Heap
                  Render.Hist
                  Render.Stat
                  Render.Timeline
                  Render.Util
                  Types
                  Util.Event
                  Util.Histo
                  View
  hs-source-dirs: app/logcat
  ghc-options:    -j -Wall -Werror -threaded -rtsopts
  default-language: GHC2021
  Build-Depends:
                  base == 4.*,
                  bytestring,
                  containers,
                  extra,
                  free,
                  gi-cairo,
                  gi-cairo-connector >= 0.1.1,
                  gi-cairo-render >= 0.1.2,
                  gi-gdk,
                  gi-gtk,
                  -- needed for Data.GI.Gtk.Threading
                  gi-gtk-hs,
                  gi-pango,
                  gi-pangocairo,
                  ghc-events,
                  haskell-gi-base,
                  lens > 5,
                  network,
                  pretty-simple,
                  stm,
                  text,
                  transformers

Executable hi-live
  Main-is:        Main.hs
  hs-source-dirs: app/hi-live
  ghc-options:    -j -Wall -Werror -threaded -rtsopts
  default-language:     GHC2021
  Build-Depends:
                  base == 4.*,
                  gi-cairo-connector,
                  gi-cairo-render,
                  gi-gdk,
                  gi-gtk,
                  gi-gtk-hs,
                  gi-pango,
                  gi-pangocairo,
                  ghc-specter-logcat,
                  haskell-gi-base,
                  text,
                  time
