cabal-version: 3.8

name:           ghc-specter-plugin
version:        1.0.0.0
synopsis:       GHC pipeline inspecter plugin
description:    Please see the README on GitHub at <https://github.com/MercuryTechnologies/ghc-specter#readme>
category:       Development
homepage:       https://github.com/MercuryTechnologies/ghc-specter#readme
bug-reports:    https://github.com/MercuryTechnologies/ghc-specter/issues
author:         Ian-Woo Kim <ianwookim@gmail.com>
maintainer:     Ian-Woo Kim <ianwookim@gmail.com>
copyright:      © 2022-2023 Mercury Inc. All rights reserved.
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/MercuryTechnologies/ghc-specter

library
  exposed-modules:
      GHCSpecter.Channel.Common.Types
      GHCSpecter.Channel.Inbound.Types
      GHCSpecter.Channel.Outbound.Types
      GHCSpecter.Comm
      GHCSpecter.Config
      GHCSpecter.Data.GHC.Orphans
      GHCSpecter.Data.Map
      GHCSpecter.Util.GHC
      Plugin.GHCSpecter
      Plugin.GHCSpecter.Comm
      Plugin.GHCSpecter.Console
      Plugin.GHCSpecter.Hooks
      Plugin.GHCSpecter.Init
      Plugin.GHCSpecter.Tasks
      Plugin.GHCSpecter.Tasks.Core2Core
      Plugin.GHCSpecter.Tasks.Typecheck
      Plugin.GHCSpecter.Types
  other-modules:
      Paths_ghc_specter_plugin
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages
  build-depends:
      aeson
    , base >=4.15 && <5
    , binary
    , binary-instances
    , bytestring
    , containers
    , directory
    , errors
    , extra
    -- , ghc-debug-stub
    , network
    , process
    , safe
    , stm
    , text
    , time
    , yaml
  default-language: GHC2021
  if impl (ghc >= 9.7)
    build-depends:
        ghc
    hs-source-dirs:
        src-ghcHEAD
  if impl (ghc >= 9.6) && impl (ghc < 9.7)
    build-depends:
        ghc ==9.6.*
    hs-source-dirs:
        src-ghc96
