cabal-version: 3.0
name:           ghc-specter-render
version:        1.0.0.0
synopsis:       render primitives independent of backend
description:    Please see the README on GitHub at <https://github.com/MercuryTechnologies/ghc-specter#readme>
category:       Development
homepage:       https://github.com/MercuryTechnologies/ghc-specter#readme
bug-reports:    https://github.com/MercuryTechnologies/ghc-specter/issues
author:         Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
maintainer:     Rebecca Turner <rebeccat@mercury.com>,
                Ian-Woo Kim <iank@mercury.com>
copyright:      © 2022 Mercury Inc. All rights reserved.
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/MercuryTechnologies/ghc-specter

library
  exposed-modules:
      GHCSpecter.Graphics.DSL
  hs-source-dirs:
      src
  ghc-options: -Wall -Wunused-packages
  build-depends:
      base >= 4.15 && <5,
      text
  default-language: GHC2021
