
executable ghc-specter-daemon
  main-is: Main.hs
  other-modules:
      GHCSpecter.ConcurReplica.DOM
      GHCSpecter.ConcurReplica.DOM.Events
      GHCSpecter.ConcurReplica.Run
      GHCSpecter.ConcurReplica.SVG
      GHCSpecter.ConcurReplica.Types
      GHCSpecter.ConcurReplica.WaiHandler
      GHCSpecter.Driver.Web
      GHCSpecter.Web
      GHCSpecter.Web.ConcurReplicaSVG
      GHCSpecter.Web.Console
      GHCSpecter.Web.ConsoleItem
      GHCSpecter.Web.GHCCore
      GHCSpecter.Web.ModuleGraph
      GHCSpecter.Web.Session
      GHCSpecter.Web.SourceView
      GHCSpecter.Web.Timing
      GHCSpecter.Web.Util
      Paths_ghc_specter_daemon
  hs-source-dirs:
      app/ghc-specter-daemon
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.15 && <5
    , bytestring
    , concur-core
    , concur-replica
    , containers
    , errors
    , extra
    -- this free libray dep is still needed due to concur-replica
    , free
    , ghc-specter-daemon
    , ghc-specter-plugin
    , ghc-specter-render
    , http-types
    , lens
    , optparse-applicative
    , pretty-simple
    , replica
    , scientific
    , stm
    , text
    , time
    , transformers
    , wai
    , wai-websockets
    , warp
    , websockets
  default-language: GHC2021
